[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/theme.tres" type="Theme" id=1]
[ext_resource path="res://fotos/boxer.jpg" type="Texture" id=2]
[ext_resource path="res://avatares/freddy.png" type="Texture" id=3]
[ext_resource path="res://scripts/Transaccion.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.290196, 0.6, 0.529412, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Transaccion" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="BtnVolver" type="Button" parent="."]
margin_left = 35.0
margin_top = 35.0
margin_right = 110.0
margin_bottom = 81.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Chat"
__meta__ = {
"_edit_lock_": true
}

[node name="Titulo" type="Label" parent="."]
margin_left = 257.0
margin_top = 37.0
margin_right = 334.0
margin_bottom = 70.0
rect_scale = Vector2( 2.5, 2.5 )
text = "Transacción"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]
margin_left = 6.0
margin_top = 184.0
margin_right = 718.0
margin_bottom = 564.0
__meta__ = {
"_edit_lock_": true
}

[node name="FotoVende" type="TextureRect" parent="."]
margin_left = 50.0
margin_top = 216.0
margin_right = 280.0
margin_bottom = 430.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Foto" type="TextureRect" parent="."]
margin_left = 300.0
margin_top = 214.0
margin_right = 662.0
margin_bottom = 478.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Nombre" type="Label" parent="."]
margin_left = 53.0
margin_top = 438.0
margin_right = 178.0
margin_bottom = 491.0
rect_scale = Vector2( 1.75, 1.75 )
custom_constants/line_spacing = -4
text = "Freddy Antonio"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Item" type="Label" parent="."]
margin_left = 308.0
margin_top = 484.0
margin_right = 510.0
margin_bottom = 513.0
rect_scale = Vector2( 1.75, 1.75 )
custom_constants/line_spacing = -4
text = "Boxers súper buenos"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="BtnBorrar" type="Button" parent="."]
margin_left = 121.0
margin_top = 573.0
margin_right = 404.0
margin_bottom = 606.0
rect_scale = Vector2( 1.75, 1.75 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.592157, 0.596078, 0.596078, 1 )
custom_colors/font_color_hover_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_colors/font_color = Color( 0.141176, 0.454902, 0.388235, 1 )
custom_colors/font_color_hover = Color( 0.643137, 0.498039, 0.188235, 1 )
custom_colors/font_color_pressed = Color( 0.0705882, 0.254902, 0.215686, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Cancelar interacción y borrar chat"
__meta__ = {
"_edit_lock_": true
}

[node name="Costo" type="Label" parent="."]
margin_left = 165.0
margin_top = 632.0
margin_right = 361.0
margin_bottom = 675.0
rect_scale = Vector2( 2, 2 )
text = "valor de compra o venta"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Pan" type="Panel" parent="."]
margin_left = 499.0
margin_top = 731.0
margin_right = 542.0
margin_bottom = 784.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="LinCosto" type="SpinBox" parent="."]
margin_left = 222.0
margin_top = 712.0
margin_right = 383.0
margin_bottom = 758.0
rect_scale = Vector2( 2, 2 )
max_value = 1e+06
step = 1000.0
rounded = true
align = 1
prefix = "$"
__meta__ = {
"_edit_lock_": true
}

[node name="BtnOk" type="Button" parent="."]
margin_left = 163.0
margin_top = 832.0
margin_right = 376.0
margin_bottom = 878.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
text = "Transacción Hecha"
__meta__ = {
"_edit_lock_": true
}

[node name="Subtitulo" type="Label" parent="."]
margin_left = 77.0
margin_top = 948.0
margin_right = 359.0
margin_bottom = 1086.0
rect_scale = Vector2( 2, 2 )
custom_constants/line_spacing = -4
text = "aquí puedes registrar una compra, venta o cancelación de interacción, así eliminas un chat y además llevas un balance de tus ingresos, pero nota, esto no hará la compraventa, es tu historial"
align = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="BtnVolver" to="." method="_on_BtnVolver_pressed"]
[connection signal="pressed" from="BtnBorrar" to="." method="_on_BtnBorrar_pressed"]
[connection signal="pressed" from="BtnOk" to="." method="_on_BtnOk_pressed"]
